tests/expectations/compiler/records/duplicate_var_fail.out
Error [ETYC0372016]: Record variable `owner` is already declared.
    --> compiler-test:5:9
     |
   4 |           owner: address,
     |           ^^^^^^^^^^^^^^ `owner` first declared here
   5 |           owner: address, // Cannot define two record variables with the same name.
     |           ^^^^^^^^^^^^^^ record variable already declared
Error [ETYC0372016]: Record variable `owner` is already declared.
    --> compiler-test:14:9
     |
  11 |           owner: address,
     |           ^^^^^^^^^^^^^^ `owner` first declared here
   ...
  14 |           owner: address,
     |           ^^^^^^^^^^^^^^ record variable already declared
Error [ETYC0372016]: Record variable `owner` is already declared.
    --> compiler-test:21:9
     |
  19 |           owner: address,
     |           ^^^^^^^^^^^^^^ `owner` first declared here
  20 |
  21 |           owner: address,
     |           ^^^^^^^^^^^^^^ record variable already declared
Error [ETYC0372016]: Record variable `amount` is already declared.
    --> compiler-test:22:9
     |
  20 |           amount: u64,
     |           ^^^^^^^^^^^ `amount` first declared here
  21 |
  22 |           amount: u64,
     |           ^^^^^^^^^^^ record variable already declared
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:1:9
     |
   1 | program test.aleo {
     |         ^^^^^^^^^
